landing page visuals and layout complete.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header><nav>
         <div class="nav-bar"> <!-- logo -->
-            <div class="logo">Charles Kantz</div>
-            <div></div>
+            <span class="logo">Charles Kantz</span>
+            <img src="img/bars.png" alt="menu">
         </div></nav>
     </header>
-    <main>
-        <div class="flex-container">
+    <main class="home-bg">
+        <div class="flex-container-column">
             <div class="flex-1"> <!-- headers -->
                 <div><h1>Hello, I'm Charles.</h1></div>
                 <div><h2>Designer turning developer.</h2></div>
@@ -28,15 +28,19 @@
     </main>
     <footer>
         <div class="footer-bar">
-            <div> <!-- footer nav -->
-                <div>
+            <div class="flex-container-row"> <!-- footer nav -->
+                <div class="footer-flex-1">
                     <div>Home</div>
                     <div>About</div>
                     <div>Contact</div>
                 </div>
-                <div></div>
+                <div class="footer-flex-2">
+                    <img src="img/ig.png" alt="Instagram icon">
+                    <img src="img/gh.png" alt="GitHub icon">
+                    <img src="img/in.png" alt="Linkedin icon">
+                </div>
             </div>
-            <div>© Charles Kantz</div> <!-- copyright -->
+            <div class="mouse-type">© Charles Kantz</div> <!-- copyright -->
         </div>
     </footer>
 </body>
