mobile version of website complete

--- a/about.html
+++ b/about.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Charles Kantz - Designer Turned Developer</title>
-    <script src="script.js"></script> <!-- mobile nav toggle -->
-    <!-- stylesheets / 1: browser reset / 2: page styling / 3: google font import -->
+    <title>About Charles Kantz - Designer Turning Developer</title>
+    <script src="script.js"></script>
+     <!-- stylesheet 1: browser reset / 2: page styling / 3: google font import-->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono|Work+Sans:400,600&display=swap" rel="stylesheet">
-
 </head>
 <body> 
     <header>
@@ -31,15 +30,26 @@
             </div>
         </nav>
     </header>
-    <main class="home-bg"> <!--                 MAIN    -->
-        <div class="flex-container-column">
-            <div class="flex-1"> <!-- headers -->
-                <div><h1>Hello, I'm Charles.</h1></div>
-                <div><h2>Designer turning developer.</h2></div>
-            </div>
-            <div class="flex-2"> <!-- CTA -->
-                <a href="about.html"><button>Get to know me</button></a>
-            </div> 
+    <main>
+        <div class="left-margin"><h1>About Me</h1></div>
+        <div class="portrait">
+            <img src="img/ckantz_portrait.jpg" alt="Photo of Charles Kantz">
+        </div>
+        <div class="about"><h2>I am starting a new journey into web development!</h2>
+            <p>As a former designer of 12 years I have occasionally dipped my toes into coding for my projects. It wasn't until designing and implementing a fully working VR experience that I realized how much I enjoyed software development, even more than design. I took that as a sign and left my job to pursue this new love. I am now currently enrolled in the Rithm School where I will hone my skills and complete my transition to development!</p>
+            <p> Outside of my career, I have spent most of my life in the Bay Area, aside from a few years in the suburbs of Portland. Besides immersing myself in development and design, you can find me enjoying sci-fi, photography, video games, baking bread, and the company of friends.</p></div>
+        <div class="left-margin download">
+            <a href="img/ckantz_resume.pdf" download>
+                <img src="img/download.png" alt="Download resume icon">
+                <span>
+                    <strong>Download my resume here.</strong>
+                </span>
+            </a>
+        </div>
+        <div class="left-margin">
+            <a href="contact.html">
+                <button>Let's Get in Touch</button>
+            </a>
         </div>
     </main>
     <footer>
