--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Charles Kantz - Designer Turned Developer</title>
-    <script src="script.js"></script> <!-- mobile nav toggle -->
-    <!-- stylesheets / 1: browser reset / 2: page styling / 3: google font import -->
+    <title>Contact Charles Kantz - Designer Turning Developer</title>
+    <script src="script.js"></script>
+    <!-- stylesheet 1: browser reset / 2: page styling / 3: google font import-->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono|Work+Sans:400,600&display=swap" rel="stylesheet">
-
 </head>
 <body> 
     <header>
@@ -31,15 +30,22 @@
             </div>
         </nav>
     </header>
-    <main class="home-bg"> <!--                 MAIN    -->
-        <div class="flex-container-column">
-            <div class="flex-1"> <!-- headers -->
-                <div><h1>Hello, I'm Charles.</h1></div>
-                <div><h2>Designer turning developer.</h2></div>
-            </div>
-            <div class="flex-2"> <!-- CTA -->
-                <a href="about.html"><button>Get to know me</button></a>
-            </div> 
+    <main>
+        <div class="left-margin">
+            <h1>Contact</h1>
+        </div>
+        <div>
+            <h2 class="left-margin">Reach out on social media if you want to say hello!</h2>
+        </div>
+        <div class="left-margin contact-icons">
+            <a href="address" target="_blank"><img src="img/ig-contact.png" alt="instagram logo"></a>
+            <a href="address" target="_blank"><img src="img/gh-contact.png" alt="github logo"></a>
+            <a href="address" target="_blank"><img src="img/in-contact.png" alt="linkedin logo"></a>
+        </div>
+        <div class="left-margin">
+            <h2 >For professional inquiries, please email me!</h2>
+            <h3><a href="mailto: kantz.charles@gmail.com"> kantz.charles@gmail.com</a></h3>
+            <img src="img/wave.png" alt="wave icon">
         </div>
     </main>
     <footer>
