margin adjustment to footer icons. added padding under wave icon.

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         <div class="left-margin">
             <h2 >For professional inquiries, please email me!</h2>
             <h3><a href="mailto: kantz.charles@gmail.com"> kantz.charles@gmail.com</a></h3>
-            <img src="img/wave.png" alt="wave icon">
+            <img class="bottom-margin" src="img/wave.png" alt="wave icon">
         </div>
     </main>
     <footer>
