--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,15 @@
         <nav> <!--                 NAVIGATION    -->
             <div class="nav-bar"> 
                 <span class="logo"><a href="index.html">Charles Kantz</a></span> 
-                <a href="javascript:void(0);" onclick="menuToggle()">
-                    <img class="mobile-menu" src="img/bars.png" alt="menu">
-                </a>
+                <div class="mobile-menu">
+                    <a href="javascript:void(0);" onclick="menuToggle()">
+                    <img src="img/bars.png" alt="menu"></a>
+                </div>
+                <div class="wide-nav"> <!--               DESKTOP NAV -->
+                    <a href="about.html">About</a> <a href="contact.html">Contact</a>
+                </div>
             </div>
-            <div class="mobile-nav" id="menu"> <!-- MOBILE NAV (OFF BY DEFAULT)-->
+            <div class="mobile-nav" id="menu"> <!-- MOBILE NAV (HIDDEN BY DEFAULT)-->
                 <div>
                     <a href="javascript:void(0);" onclick="menuToggle()"><img class="mobile-menu" src="img/bars.png" alt="menu"></a>
                     <div><a href="index.html">Home</a></div>
@@ -52,9 +56,9 @@
         <div class="footer-bar">
             <div class="flex-container-row"> <!-- footer nav -->
                 <div class="footer-flex-1">
-                    <div><a href="index.html">Home</a></div>
-                    <div><a href="about.html">About</a></div>
-                    <div><a href="contact.html">Contact</a></div>
+                    <a href="index.html">Home</a><br>
+                    <a href="about.html">About</a><br>
+                    <a href="contact.html">Contact</a><br>
                 </div>
                 <div class="footer-flex-2">
                     <a href="https://www.instagram.com/charleskantz/" target="_blank">
