fixed placeholder addresses on contact icons

--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
                 <h2>Reach out on social media if you want to say hello!</h2>
             </div>
             <div class="left-margin contact-icons">
-                <a href="address" target="_blank"><img src="img/ig-contact.png" alt="instagram logo"></a>
-                <a href="address" target="_blank"><img src="img/gh-contact.png" alt="github logo"></a>
-                <a href="address" target="_blank"><img src="img/in-contact.png" alt="linkedin logo"></a>
+                <a href="https://www.instagram.com/charleskantz/" target="_blank"><img src="img/ig-contact.png" alt="instagram logo"></a>
+                <a href="https://github.com/charleskantz" target="_blank"><img src="img/gh-contact.png" alt="github logo"></a>
+                <a href="https://www.linkedin.com/in/charleskantz/" target="_blank"><img src="img/in-contact.png" alt="linkedin logo"></a>
             </div>
             <div class="left-margin">
                 <h2 >For professional inquiries, please email me!</h2>
